--- a/src/main/resources/tts/hello-view.fxml
+++ b/src/main/resources/tts/hello-view.fxml
@@ -5,8 +5,9 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
+<?import java.awt.Insets?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="org.tts.ttsdeckgen.HelloController">
+      fx:controller="org.tts.HelloController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
